# zorin_app_organizer

./: .gitignore  BRANCH_COMPARISON.md  GITHUB_ACTIONS_MONITORING.md  LICENSE  MANIFEST.in  Makefile  P1_ENHANCEMENTS.md  PRODUCTION_SETUP.md  README.md  RUN_THIS_TEST.sh  SECURITY_AUDIT.md  apt_backend.py  backup.py  build-deb.sh  database.py  diagnose.py  flatpak_backend.py  install.sh  logger.py  main.py  package_verification.py  pyproject.toml  pytest.ini  rate_limiter.py  requirements-test.txt  requirements.txt  setup.py  snap_backend.py  test_gui.py  test_minimal.py  uninstall.sh
.github/workflows/: security-scan.yml  tests.yml
data/: upm.desktop
debian/: changelog  control  copyright  rules
docs/: CLI_USAGE.md
docs/plans/: 2025-11-18-implement-upm-phase1.md  2025-11-18-unified-package-manager-design.md
polysynaptic/: Dockerfile.dev  Makefile.am  Makefile.dev  README.md  README.polysynaptic.md  config.h.in  configure.ac
polysynaptic/common/: Makefile.am  aptbackend.cc  aptbackend.h  aptprovider.cc  aptprovider.h  backendmanager.cc  backendmanager.h  flatpakbackend.cc  flatpakbackend.h  flatpakprovider.cc  flatpakprovider.h  ipackagebackend.h  packageranking.cc  packageranking.h  packagesourceprovider.h  rconfiguration.cc  snapbackend.cc  snapbackend.h  snapprovider.cc  snapprovider.h  structuredlog.h
polysynaptic/data/: Makefile.am  com.ubuntu.pkexec.polysynaptic.policy  com.ubuntu.pkexec.polysynaptic.policy.in  com.ubuntu.pkexec.synaptic.policy  io.github.mvo5.synaptic.metainfo.xml  io.github.pitcany.polysynaptic.metainfo.xml  io.github.pitcany.polysynaptic.metainfo.xml.in  polysynaptic-pkexec  polysynaptic.desktop  polysynaptic.desktop.in
polysynaptic/gtk/: Makefile.am  gsynaptic.cc  rgbackendsettings.cc  rgbackendsettings.h  rgdebinstallprogress.cc  rgdebugpanel.cc  rgdebugpanel.h  rggtkbuilderwindow.cc  rgmainwindow.cc  rgmainwindow.h  rgpkgtreeview.cc  rgpkgtreeview.h  rgpreferenceswindow.cc  rgsourcespane.cc  rgsourcespane.h  rgunifiedview.cc  rgunifiedview.h  rguserdialog.cc  rgwindow.cc
polysynaptic/gtk/gtkbuilder/: Makefile.am  window_main.ui
polysynaptic/man/: Makefile.am  polysynaptic.8
polysynaptic/pixmaps/: Makefile.am
polysynaptic/po/: .intltool-merge-cache  POTFILES
polysynaptic/tests/: Makefile.am  test_backend_diagnosis.cc  test_backends.cc  test_providers.cc  test_rpackagefilter.cc  test_unified_view.cc
systemd/: install-systemd.sh  uninstall-systemd.sh  upm-backup.service  upm-backup.timer
tests/: __init__.py  test_apt_backend.py  test_backup.py  test_cli.py  test_database.py  test_flatpak_backend.py  test_integration.py  test_models.py  test_package_verification.py  test_rate_limiter.py  test_security_integration.py  test_snap_backend.py
tests/test_adapters/: test_apt_adapter.py  test_base.py  test_flatpak_adapter.py  test_snap_adapter.py
upm/: cli.py  database.py  models.py
upm/adapters/: apt_adapter.py  base.py  flatpak_adapter.py  snap_adapter.py
