[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zorin-unified-package-manager"
version = "1.0.0"
description = "Unified package manager for Zorin OS supporting APT, Snap, and Flatpak"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Zorin App Organizer Team", email = "support@zorinos.com"}
]
maintainers = [
    {name = "Zorin App Organizer Team", email = "support@zorinos.com"}
]
keywords = ["package-manager", "apt", "snap", "flatpak", "zorin", "ubuntu", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Software Distribution",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: Qt",
]
dependencies = [
    "PyQt5>=5.15.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/pitcany/zorin_app_organizer"
Documentation = "https://github.com/pitcany/zorin_app_organizer/blob/main/README.md"
Repository = "https://github.com/pitcany/zorin_app_organizer"
"Bug Tracker" = "https://github.com/pitcany/zorin_app_organizer/issues"

[project.scripts]
upm = "main:main"
unified-package-manager = "main:main"

[project.gui-scripts]
upm-gui = "main:main"

[tool.setuptools]
py-modules = ["main", "database", "logger", "apt_backend", "snap_backend", "flatpak_backend"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.desktop", "*.svg"]
